[package]
name = "surreal_bb8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
"protocol-ws" = ["surrealdb/protocol-ws"]
"rustls" = ["surrealdb/rustls"]
"native-tls" = ["surrealdb/native-tls"]
"kv-fdb-6_0" = ["surrealdb/kv-fdb-6_0"]
"kv-speedb" = ["surrealdb/kv-speedb"]
"kv-fdb-6_3" = ["surrealdb/kv-fdb-6_3"]
"kv-fdb" = ["surrealdb/kv-fdb"]
"kv-fdb-6_2" = ["surrealdb/kv-fdb-6_2"]
"kv-fdb-6_1" = ["surrealdb/kv-fdb-6_1"]
"kv-fdb-7_1" = ["surrealdb/kv-fdb-7_1"]
"kv-rocksdb" = ["surrealdb/kv-rocksdb"]
"kv-mem" = ["surrealdb/kv-mem"]
"kv-fdb-5_2" = ["surrealdb/kv-fdb-5_2"]
"protocol-http" = ["surrealdb/protocol-http"]
"kv-fdb-7_0" = ["surrealdb/kv-fdb-7_0"]
"kv-fdb-5_1" = ["surrealdb/kv-fdb-5_1"]
"foundationdb" = ["surrealdb/foundationdb"]
"kv-tikv" = ["surrealdb/kv-tikv"]
"kv-indxdb" = ["surrealdb/kv-indxdb"]
"http" = ["surrealdb/http"]
"scripting" = ["surrealdb/scripting"]

[dependencies]
async-trait = "0.1.74"
bb8 = "0.8.1"
surrealdb = "1.0.0"
tokio = "1.34.0"
